--- a/index.html
+++ b/index.html
@@ -3,59 +3,60 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>home_work_#1</title>
+    <title>home_work_#2</title>
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
 
   <body>
-    <header class="header">
+    <header class="page-header">
       <a class="logo" href="" target="_blank" rel="noopener"
-        ><span class="accent">Web</span>Studio</a
+        >Web<span>Studio</span></a
       >
       <nav>
-        <ul class="navigation">
-          <li><a href="">Студія</a></li>
-          <li><a href="">Портфоліо</a></li>
-          <li><a href="">Контакти</a></li>
+        <ul class="stile-nav list">
+          <li><a href="" class="link current">Студія</a></li>
+          <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
+          <li><a href="" class="link">Контакти</a></li>
         </ul>
       </nav>
       <div class="contacts">
-        <a class="mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a class="phone" href="tel:+380961111111">+38 096 111 11 11 </a>
+        <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a class="link" href="tel:+380961111111">+38 096 111 11 11 </a>
       </div>
     </header>
     <main>
       <section class="hero">
-        <h1>
+        <h1 class="hero-title">
           Ефективні рішення для <br />
           вашого бізнесу
         </h1>
-        <button class="button-header" type="button">Замовити послугу</button>
+        <button class="button" type="button">Замовити послугу</button>
       </section>
-      <section class="cards">
-        <h2>Переваги</h2>
-        <ul class="list-benefits">
+      <section class="section">
+        <h2 class="section-title">Переваги</h2>
+        <ul class="feature-list list">
           <li>
-            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+            <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
             <p>
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
             </p>
           </li>
           <li>
-            <h3>ПУНКТУАЛЬНІСТЬ</h3>
+            <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
             <p>
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
           </li>
           <li>
-            <h3>ПЛАНУВАННЯ</h3>
+            <h3 class="title">ПЛАНУВАННЯ</h3>
             <p>
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
           <li>
-            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
             <p>
               Значимість цих проблем настільки очевидна, що реалізація планових
               завдань.
@@ -63,9 +64,9 @@
           </li>
         </ul>
       </section>
-      <section class="what-do">
-        <h2>Чим ми займаємося</h2>
-        <ul>
+      <section class="section">
+        <h2 class="section-title">Чим ми займаємося</h2>
+        <ul class="work-list list">
           <li>
             <img
               src="./images/box1.jpg"
@@ -92,9 +93,9 @@
           </li>
         </ul>
       </section>
-      <section class="teame">
-        <h2>Наша команда</h2>
-        <ul>
+      <section class="section">
+        <h2 class="section-title">Наша команда</h2>
+        <ul class="team-list list">
           <li>
             <img
               src="./images/photo1.jpg"
@@ -140,20 +141,24 @@
     </main>
     <footer>
       <a class="logo" href="" target="_blank" rel="noopener"
-        ><span class="accent">Web</span>Studio</a
+        >Web<span class="acsent">Studio</span></a
       >
       <address>
-        <ul>
+        <ul class="footer-address list">
           <li>
-            <a class="address" href="">м. Київ, пр-т Лесі Українки, 26</a>
+            <a class="address address" href=""
+              >м. Київ, пр-т Лесі Українки, 26</a
+            >
           </li>
           <li>
-            <a class="mail" href="mailto:info@devstudio.com"
+            <a class="address mail" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a class="phone" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="address phone" href="tel:+380961111111"
+              >+38 096 111 11 11</a
+            >
           </li>
         </ul>
       </address>
