--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,7 @@
     </header>
     <main>
       <h1 class="portfolio">Портфоліо</h1>
-      <ul class="portfolio-button list">
+      <ul class="portfolio-nav list">
         <li><button class="portfolio-button" type="button">Усі</button></li>
         <li>
           <button class="portfolio-button" type="button">Веб-сайти</button>
@@ -153,28 +153,28 @@
       </ul>
     </main>
     <footer>
-      <a class="logo" href="" target="_blank" rel="noopener"
-        >Web<span class="acsent">Studio</span></a
-      >
-      <address>
-        <ul class="footer-address list">
-          <li>
-            <a class="address address" href=""
-              >м. Київ, пр-т Лесі Українки, 26</a
-            >
-          </li>
-          <li>
-            <a class="address mail" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="address phone" href="tel:+380961111111"
-              >+38 096 111 11 11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="footer">
+        <a class="logo" href="" target="_blank" rel="noopener"
+          >Web<span class="acsent">Studio</span></a
+        >
+        <address>
+          <ul class="contacts list">
+            <li>
+              <a class="address address" href=""
+                >м. Київ, пр-т Лесі Українки, 26</a
+              >
+            </li>
+            <li>
+              <a class="link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
