--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           Ефективні рішення для <br />
           вашого бізнесу
         </h1>
-        <button class="button" type="button">Замовити послугу</button>
+        <button class="button-hero" type="button">Замовити послугу</button>
       </section>
       <section class="section">
         <h2 class="section-title">Переваги</h2>
@@ -144,28 +144,28 @@
       </section>
     </main>
     <footer>
-      <a class="logo" href="" target="_blank" rel="noopener"
-        >Web<span class="acsent">Studio</span></a
-      >
-      <address>
-        <ul class="footer-address list">
-          <li>
-            <a class="address address" href=""
-              >м. Київ, пр-т Лесі Українки, 26</a
-            >
-          </li>
-          <li>
-            <a class="address mail" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="address phone" href="tel:+380961111111"
-              >+38 096 111 11 11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="footer">
+        <a class="logo" href="" target="_blank" rel="noopener"
+          >Web<span class="acsent">Studio</span></a
+        >
+        <address>
+          <ul class="contacts list">
+            <li>
+              <a class="address address" href=""
+                >м. Київ, пр-т Лесі Українки, 26</a
+              >
+            </li>
+            <li>
+              <a class="link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
