--- a/portfolio.html
+++ b/portfolio.html
@@ -31,128 +31,134 @@
       </div>
     </header>
     <main>
-      <h1 class="portfolio">Портфоліо</h1>
-      <ul class="portfolio-nav list">
-        <li><button class="portfolio-button" type="button">Усі</button></li>
-        <li>
-          <button class="portfolio-button" type="button">Веб-сайти</button>
-        </li>
-        <li><button class="portfolio-button" type="button">Додатки</button></li>
-        <li><button class="portfolio-button" type="button">Дизайн</button></li>
-        <li>
-          <button class="portfolio-button" type="button">Маркетинг</button>
-        </li>
-      </ul>
-      <ul class="portfolio-list list">
-        <li>
-          <a href=""
-            ><img
-              src="./images/portfolio1.jpg"
-              alt="Приклад веб-сайту"
-              width="370"
-              height="294"
-            />
-            <h2 class="portfolio-title">Технокряк</h2>
-            <p>Веб-сайт</p>
-          </a>
-        </li>
-        <li>
-          <a href=""
-            ><img
-              src="./images/portfolio2.jpg"
-              alt="Приклад дизайну"
-              width="370"
-              height="294"
-            />
-            <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
-            <p>Дизайн</p>
-          </a>
-        </li>
-        <li>
-          <a href=""
-            ><img
-              src="./images/portfolio3.jpg"
-              alt="Приклад додатку"
-              width="370"
-              height="294"
-            />
-            <h2 class="portfolio-title">Ресторан Seafood</h2>
-            <p>Додаток</p>
-          </a>
-        </li>
-        <li>
-          <a href=""
-            ><img
-              src="./images/portfolio4.jpg"
-              alt="Приклад маркетингу"
-              width="370"
-              height="294"
-            />
-            <h2 class="portfolio-title">Проєкт Prime</h2>
-            <p>Маркетинг</p>
-          </a>
-        </li>
-        <li>
-          <a href=""
-            ><img
-              src="./images/portfolio5.jpg"
-              alt="Приклад додатку"
-              width="370"
-              height="294"
-            />
-            <h2 class="portfolio-title">Проєкт Boxes</h2>
-            <p>Додаток</p>
-          </a>
-        </li>
-        <li>
-          <a href=""
-            ><img
-              src="./images/portfolio6.jpg"
-              alt="Приклад веб-сайту"
-              width="370"
-              height="294"
-            />
-            <h2 class="portfolio-title">Inspiration has no Borders</h2>
-            <p>Веб-сайт</p>
-          </a>
-        </li>
-        <li>
-          <a href=""
-            ><img
-              src="./images/portfolio7.jpg"
-              alt="Приклад дизайну"
-              width="370"
-              height="294"
-            />
-            <h2 class="portfolio-title">Видання Limited Edition</h2>
-            <p>Дизайн</p>
-          </a>
-        </li>
-        <li>
-          <a href=""
-            ><img
-              src="./images/portfolio8.jpg"
-              alt="Приклад маркетингу"
-              width="370"
-              height="294"
-            />
-            <h2 class="portfolio-title">Проєкт LAB</h2>
-            <p>Маркетинг</p>
-          </a>
-        </li>
-        <li>
-          <a href=""
-            ><img
-              src="./images/portfolio9.jpg"
-              alt="Приклад додатку"
-              width="370"
-              height="294"
-            />
-            <h2 class="portfolio-title">Growing Business</h2>
-            <p>Додаток</p>
-          </a>
-        </li>
-      </ul>
+      <section class="portfolio">
+        <h1 class="portfolio-title">Портфоліо</h1>
+        <ul class="portfolio-nav list">
+          <li><button class="portfolio-button" type="button">Усі</button></li>
+          <li>
+            <button class="portfolio-button" type="button">Веб-сайти</button>
+          </li>
+          <li>
+            <button class="portfolio-button" type="button">Додатки</button>
+          </li>
+          <li>
+            <button class="portfolio-button" type="button">Дизайн</button>
+          </li>
+          <li>
+            <button class="portfolio-button" type="button">Маркетинг</button>
+          </li>
+        </ul>
+        <ul class="portfolio-list list">
+          <li>
+            <a href=""
+              ><img
+                src="./images/portfolio1.jpg"
+                alt="Приклад веб-сайту"
+                width="370"
+                height="294"
+              />
+              <h2 class="portfolio-title">Технокряк</h2>
+              <p>Веб-сайт</p>
+            </a>
+          </li>
+          <li>
+            <a href=""
+              ><img
+                src="./images/portfolio2.jpg"
+                alt="Приклад дизайну"
+                width="370"
+                height="294"
+              />
+              <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
+              <p>Дизайн</p>
+            </a>
+          </li>
+          <li>
+            <a href=""
+              ><img
+                src="./images/portfolio3.jpg"
+                alt="Приклад додатку"
+                width="370"
+                height="294"
+              />
+              <h2 class="portfolio-title">Ресторан Seafood</h2>
+              <p>Додаток</p>
+            </a>
+          </li>
+          <li>
+            <a href=""
+              ><img
+                src="./images/portfolio4.jpg"
+                alt="Приклад маркетингу"
+                width="370"
+                height="294"
+              />
+              <h2 class="portfolio-title">Проєкт Prime</h2>
+              <p>Маркетинг</p>
+            </a>
+          </li>
+          <li>
+            <a href=""
+              ><img
+                src="./images/portfolio5.jpg"
+                alt="Приклад додатку"
+                width="370"
+                height="294"
+              />
+              <h2 class="portfolio-title">Проєкт Boxes</h2>
+              <p>Додаток</p>
+            </a>
+          </li>
+          <li>
+            <a href=""
+              ><img
+                src="./images/portfolio6.jpg"
+                alt="Приклад веб-сайту"
+                width="370"
+                height="294"
+              />
+              <h2 class="portfolio-title">Inspiration has no Borders</h2>
+              <p>Веб-сайт</p>
+            </a>
+          </li>
+          <li>
+            <a href=""
+              ><img
+                src="./images/portfolio7.jpg"
+                alt="Приклад дизайну"
+                width="370"
+                height="294"
+              />
+              <h2 class="portfolio-title">Видання Limited Edition</h2>
+              <p>Дизайн</p>
+            </a>
+          </li>
+          <li>
+            <a href=""
+              ><img
+                src="./images/portfolio8.jpg"
+                alt="Приклад маркетингу"
+                width="370"
+                height="294"
+              />
+              <h2 class="portfolio-title">Проєкт LAB</h2>
+              <p>Маркетинг</p>
+            </a>
+          </li>
+          <li>
+            <a href=""
+              ><img
+                src="./images/portfolio9.jpg"
+                alt="Приклад додатку"
+                width="370"
+                height="294"
+              />
+              <h2 class="portfolio-title">Growing Business</h2>
+              <p>Додаток</p>
+            </a>
+          </li>
+        </ul>
+      </section>
     </main>
     <footer>
       <div class="footer">
